--- a/index.html
+++ b/index.html
@@ -122,6 +122,28 @@
     </div>
 </div>
 
+<div class="sec3">
+    <div class="sec3dec">
+        <h1 class="sec3title">Change log</h1>
+    </div>
+    <div class="change1">
+        <div class="imghide"></div>
+        <h1 class="changetext">// Work in progress.</h1>
+        <h1 class="changedesc">this is a very cool description</h1>
+        <img src="src/pngs/main/e29cf6907ee0d451e24ba1fdc54e39f7.jpg">
+    </div>
+    <div class="change2">
+        <h1 class="changetext">// Also work in progress.</h1>
+        <h1 class="changedesc">this is a very cool and long description i dont even know if it will fit or not :(</h1>
+        <img src="src/pngs/main/Everest_mountain_desktop_wallpaper_3-1024x683.jpg">
+    </div>
+    <div class="change3">
+        <h1 class="changetext">// Same here.</h1>
+        <h1 class="changedesc">description</h1>
+        <img src="src/pngs/main/thumb-1920-691935.jpg">
+    </div>
+</div>
+
 <div id="blurjerry"></div>
 <div id="fatjerry"></div>
 <div id="jerry"></div>
