--- a/index.html
+++ b/index.html
@@ -142,6 +142,37 @@
         <h1 class="changedesc">description</h1>
         <img src="src/pngs/main/thumb-1920-691935.jpg">
     </div>
+    <div class="change4">
+        <h1 class="changetext">// Why am i below everyone.</h1>
+        <h1 class="changedesc">stinky</h1>
+        <img src="src/pngs/main/R.jpg">
+    </div>
+    <div class="change5">
+        <h1 class="changetext">// I am very big</h1>
+        <h1 class="changedesc">Wanna figure out my future
+            Get stuck on my computer
+            Is this a good decision, or maybe just an addiction?
+            Smoking my own stress away
+            Tell me if I'm straight or gay
+            Can't tell who I am anymore
+            I just need to find my door
+            I'd like a girl right next to me, or a boy right next to me
+            Should I be alone the rest of my life, or be a dad and have a wife?
+            Seems like our generations' changing
+            My life needs some arranging
+            I don't know what lies ahead
+            Time for me to go to bed
+            Hey guys, what's up? It's Verplex, and for some reason I'm perplexed
+            I'm wearing my own mask, hiding the fact that I have some tasks
+            We always make all these projects, sometimes leaving them unchecked
+            We're streaming, fursuiting, wondering what are doing
+            We have to make it out there, jumping into our own square
+            We have to get up, there's no one
+            You're the one that can make it happen
+            Our past could be dark, It might leave a mark
+            But our future is bright, let's go to the light</h1>
+        <img src="src/pngs/main/117973.jpg">
+    </div>
 </div>
 
 <div id="blurjerry"></div>
