wow a new cursor crazy

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <img src="src/pngs/navbar/contact.png">
     </div>
 </div>
-
+<div class="screen3">
 <div class="sec3">
     <div class="sec3dec">
         <h1 class="sec3title">Change log</h1>
@@ -135,21 +135,25 @@
         <div class="imghide"></div>
         <h1 class="changetext">// Work in progress.</h1>
         <h1 class="changedesc">this is a very cool description</h1>
+        <h1 class="changedate">2023 November 10</h1>
         <img src="src/pngs/main/e29cf6907ee0d451e24ba1fdc54e39f7.jpg">
     </div>
     <div class="change2">
         <h1 class="changetext">// Also work in progress.</h1>
         <h1 class="changedesc">this is a very cool and long description i dont even know if it will fit or not :(</h1>
+        <h1 class="changedate">2023 November 9</h1>
         <img src="src/pngs/main/Everest_mountain_desktop_wallpaper_3-1024x683.jpg">
     </div>
     <div class="change3">
         <h1 class="changetext">// Same here.</h1>
         <h1 class="changedesc">description</h1>
+        <h1 class="changedate">2023 November 8</h1>
         <img src="src/pngs/main/thumb-1920-691935.jpg">
     </div>
     <div class="change4">
         <h1 class="changetext">// Why am i below everyone.</h1>
         <h1 class="changedesc">stinky</h1>
+        <h1 class="changedate">2023 November 7</h1>
         <img src="src/pngs/main/R.jpg">
     </div>
     <div class="change5">
@@ -176,10 +180,84 @@
             You're the one that can make it happen
             Our past could be dark, It might leave a mark
             But our future is bright, let's go to the light</h1>
+        <h1 class="changedate">2023 November 11</h1>
         <img src="src/pngs/main/117973.jpg">
     </div>
     <div class="change6">
         <h1 class="changetext2">Click to see all changes</h1>
+    </div>
+</div>
+</div>
+
+<div class="screen4">
+    <div class="sec4">
+        <div class="titledec4">
+            <h1 class="title4">Status</h1>
+        </div>
+        <div class="server4">
+            <h1 class="statustitle">Server</h1>
+            <div class="statuslist">
+                <div class="serverlist1">
+                    <div class="serverdec"></div>
+                    <div class="serverdecan"></div>
+                    <h1 class="servertext">Offline</h1>
+                </div>
+                <div class="seplist"></div>
+                <div class="serverlist2">
+                    <div class="serverdec2"></div>
+                    <h1 class="servertext2">Accesories</h1>
+                </div>
+                <div class="serverlist3">
+                    <div class="serverdec3"></div>
+                    <h1 class="servertext3">Profile sync</h1>
+                </div>
+            </div>
+        </div>
+        <div class="client4">
+            <h1 class="statustitle">Client</h1>
+            <div class="statuslist">
+                <div class="clientlist1">
+                    <div class="clientdec"></div>
+                    <div class="clientdecan"></div>
+                    <h1 class="clienttext">Always online</h1>
+                </div>
+                <div class="seplist"></div>
+                <div class="clientlist2">
+                    <div class="clientdec2"></div>
+                    <h1 class="clienttext2">AzeraiGPT</h1>
+                </div>
+                <div class="clientlist3">
+                    <div class="clientdec3"></div>
+                    <h1 class="clienttext3">Smart connect</h1>
+                </div>
+                <div class="clientlist4">
+                    <div class="clientdec4"></div>
+                    <h1 class="clienttext4">Pentrum DSFB</h1>
+                </div>
+            </div>
+        </div>
+        <div class="forums4">
+            <h1 class="statustitle">Forums</h1>
+            <div class="statuslist">
+                <div class="forumslist1">
+                    <div class="forumsdec"></div>
+                    <div class="forumsdecan"></div>
+                    <h1 class="forumstext">Maintenance</h1>
+                </div>
+                <div class="seplist"></div>
+            </div>
+        </div>
+        <div class="services4">
+            <h1 class="statustitle">Store</h1>
+            <div class="statuslist">
+                <div class="serviceslist1">
+                    <div class="servicesdec"></div>
+                    <div class="servicesdecan"></div>
+                    <h1 class="servicestext">Maintenance</h1>
+                </div>
+                <div class="seplist"></div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -193,6 +271,7 @@
 <style>
     :root {
         --bg: rgba(9, 9, 11,1);
+        --bg1: rgba(5, 5, 6,1);
         --bg2: rgba(15,15,17,1);
         --out: rgba(40,40,42,1);
         --txt: rgba(220, 220, 220,1);
