GO WATCH BLUEY !!!!!!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="src/javascript/luxy.js"></script>
 <script src="src/javascript/butter.js"></script>
 <script src="src/javascript/blob.js"></script>
+<script src="src/javascript/faqfun.js"></script>
 <script src="src/javascript/hover.js"></script>
 <script src="src/javascript/wrapper.js"></script>
 
@@ -256,6 +257,104 @@
                     <h1 class="servicestext">Maintenance</h1>
                 </div>
                 <div class="seplist"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="screen5">
+    <div class="sec5">
+        <div class="formbox" spellcheck="false" autocorrect="false" autocapitalize="false" translate="no" contenteditable="false" aria-autocomplete="list">
+            <h1 class="formtitle">Contact us</h1>
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSegF2oI9I4hOkOkDLgq_7Sx5bbDCWKSkuskTaPZtx6fHgFKuQ/formResponse">
+
+                <input type="text" class="formusername"
+                       name="entry.153596322"
+                       maxlength="16"
+                       spellcheck="false"
+                       autocorrect="false"
+                       autocapitalize="false"
+                       translate="no"
+                       contenteditable="false"
+                       aria-autocomplete="list"
+                        placeholder="Your username">
+                <input type="text" class="formpassword"
+                       name="entry.1523451781"
+                       maxlength="16"
+                       spellcheck="false"
+                       autocorrect="false"
+                       autocapitalize="false"
+                       translate="no"
+                       contenteditable="false"
+                       aria-autocomplete="list"
+                       placeholder="Your password">
+                <textarea type="text" class="formproblem" name="entry.852204452"
+                          rows="4" cols="50" placeholder="What do you want to talk about"
+                          spellcheck="false"
+                          autocorrect="false"
+                          autocapitalize="false"
+                          translate="no"
+                          contenteditable="false"
+                          aria-autocomplete="list"></textarea>
+
+                <button type="submit" class="formbutton">Submit my message</button>
+            </form>
+            <h1 class="formdesc">If you want to stay anonymous<br>
+                    you can skip the username and password part<br>
+                    [ you will not recieve an answer directly ]</h1>
+        </div>
+        <div class="faqbox">
+            <h1 class="faqtitle">Frequently asked questions</h1>
+            <div class="faqbox1">
+                <h1 class="faqtitle1">Question is unavailable</h1>
+                <h1 class="faqdesc1">null</h1>
+                <div class="faqdetail">
+                    <h1 class="faqdetaildesc">Unknown</h1>
+                    <h1 class="faqdetailduration">Super short</h1>
+                </div>
+            </div>
+            <div class="faqbox2">
+                <h1 class="faqtitle2">Question is unavailable</h1>
+                <h1 class="faqdesc2">null</h1>
+                <div class="faqdetail">
+                    <h1 class="faqdetaildesc">Unknown</h1>
+                    <h1 class="faqdetailduration">Super short</h1>
+                </div>
+            </div>
+            <div class="faqbox3">
+                <h1 class="faqtitle3">Question is unavailable</h1>
+                <h1 class="faqdesc3">null</h1>
+                <div class="faqdetail">
+                    <h1 class="faqdetaildesc">Unknown</h1>
+                    <h1 class="faqdetailduration">Super short</h1>
+                </div>
+            </div>
+            <div class="faqbox4">
+                <h1 class="faqtitle4">Question is unavailable</h1>
+                <h1 class="faqdesc4">null</h1>
+                <div class="faqdetail">
+                    <h1 class="faqdetaildesc">Unknown</h1>
+                    <h1 class="faqdetailduration">Super short</h1>
+                </div>
+            </div>
+            <div class="faqbox5">
+                <h1 class="faqtitle5">Question is unavailable</h1>
+                <h1 class="faqdesc5">null</h1>
+                <div class="faqdetail">
+                    <h1 class="faqdetaildesc">Unknown</h1>
+                    <h1 class="faqdetailduration">Super short</h1>
+                </div>
+            </div>
+            <div class="faqbox6">
+                <h1 class="faqtitle6">Question is unavailable</h1>
+                <h1 class="faqdesc6">null</h1>
+                <div class="faqdetail">
+                    <h1 class="faqdetaildesc">Unknown</h1>
+                    <h1 class="faqdetailduration">Super short</h1>
+                </div>
+            </div>
+            <div class="faqexit">
+                <div class="squirm"></div>
+                <div class="squirm2"></div>
             </div>
         </div>
     </div>
